--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #eeeeee;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.nav-btn {
+  margin-top: 25px;
+} 
+
+.contact {
+  background-color: #fff;
+  padding: 5px;
+  margin: 5px;
+}
+
+.media-object {
+  border-radius: 50%;
+  margin-top: 18px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+.media-body {
+  padding: 15px;
+}
+
+.media img, .fileinput-new .thumbnail, .thumbnail img {
+  border-radius: 50%;
 }
